snippets/compact-search-button.css
.search_c322aa > .searchBar_c322aa {
    width: 32px !important;
    background: none;
    border-color: transparent;
    transition: background .25s ease,
        width .25s ease,
        border-color .25s ease;
}

.search_c322aa > .searchBar_c322aa .DraftEditor-root {
    padding-right: 3px !important;
}

.search_c322aa.open_c322aa > .searchBar_c322aa {
    width: 244px !important;
    background: var(--background-gradient-low, var(--input-background-default));
    border-color: var(--input-border-default);
}

.search_c322aa > .searchBar_c322aa .icon_c322aa {
    margin-right: 7px;
}

.search__49676 {
    margin: 0 !important;
}

